--- a/javajam.css
+++ b/javajam.css
@@ -1,12 +1,12 @@
 body {
-  background-image: url(/image/background.gif);
+  background-image: url(image/background.gif);
   flex-direction: column;
   display: block;
   font-family: Verdana, Tahoma, sans-serif;
 }
 
 header{
-    background-image: url(/image/javajamlogo.jpg);
+    background-image: url(image/javajamlogo.jpg);
     background-repeat: no-repeat;
     height: 150px;
     background-color: #D2B48C;
@@ -108,19 +108,19 @@ img{
 }
 
 #heroroad{
-    background-image: url(/image/heroroad.jpg);
+    background-image: url(image/heroroad.jpg);
     background-size: 100% 100%;
     height: 250px;
 }
 
 #heromugs{
-    background-image: url(/image/heromugs.jpg);
+    background-image: url(image/heromugs.jpg);
     background-size: 100% 100%;
     height: 250px;
 }
 
 #heroguitar{
-    background-image: url(/image/heroguitar.jpg);
+    background-image: url(image/heroguitar.jpg);
     background-size: 100% 100%;
     height: 250px;
 }
@@ -179,7 +179,7 @@ input,textarea{
 }
 
 #herojobs{
-    background-image: url(/image/herojobs.jpg);
+    background-image: url(image/herojobs.jpg);
     background-size: 100% 100%;
     height: 250px;
 }
